fiz um botão para voltar ao inicio

--- a/contato.html
+++ b/contato.html
@@ -18,5 +18,12 @@
       <card id="ceo">ceo</card>
       <card id="lyh">lyh</card>
    </contatos>
+
+   <button>
+      <a href="./index.html">
+
+         Voltar para página principal
+      </a>
+   </button>
 </body>
 </html>
