eu ja fiz os cards

--- a/contato.html
+++ b/contato.html
@@ -7,23 +7,41 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Document</title>
    <link rel="stylesheet" href="style2.css">
+   <script src="./src/assets/scripts/cards.js" defer></script>
+
 </head>
 <body>
-   <h1>
-      Contatos
-   </h1>
+  <h1>
+   Contatos
+  </h1>
 
-   <contatos>
-      <card id="berna">berna</card>
-      <card id="ceo">ceo</card>
-      <card id="lyh">lyh</card>
-   </contatos>
+  <main>
+   <lyh-card 
+      nome="lyh" 
+      email="noely.gangello@gmail.com" 
+      telefone="(13)991176924" 
+      idade="28" 
+      >
+      
+   </lyh-card>
+   <lyh-card 
+   nome="Berna"
+   email="berna.sammarco-gangello@gmail.com"
+   telefone="(13)991878592"
+   idade="7"
+   >
+   </lyh-card>
 
-   <button>
-      <a href="./index.html">
+   <lyh-card 
+   nome="Ceo"
+   email="ceo.sammarco@gmail.com"
+   telefone="(13)987542587"
+   idade="38"
+   
+   >
 
-         Voltar para página principal
-      </a>
-   </button>
+   </lyh-card>
+
+  </main>
 </body>
 </html>
